// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch Button (unit tests) when has a label should match the snapshot 1`] = `
<kv-switch-button label="Switch" state="off">
  <mock:shadow-root>
    <div class="switch-button-container">
      <span class="label">
        Switch
      </span>
      <div class="switch-button-content">
        <div class="switch-button switch-button--lg" part="button">
          <div class="icon-square" part="icon-square">
            <kv-svg-icon name="kv-done-all" part="icon-svg"></kv-svg-icon>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</kv-switch-button>
`;

exports[`Switch Button (unit tests) when is ON should match the snapshot 1`] = `
<kv-switch-button state="on">
  <mock:shadow-root>
    <div class="switch-button-container">
      <div class="switch-button-content">
        <div class="switch-button switch-button--lg switch-button--on" part="button">
          <div class="icon-square" part="icon-square">
            <kv-svg-icon name="kv-done-all" part="icon-svg"></kv-svg-icon>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</kv-switch-button>
`;

exports[`Switch Button (unit tests) when is disabled should match the snapshot 1`] = `
<kv-switch-button disabled="" state="off">
  <mock:shadow-root>
    <div class="switch-button-container">
      <div class="switch-button-content">
        <div class="switch-button switch-button--disabled switch-button--lg" part="button">
          <div class="icon-square" part="icon-square">
            <kv-svg-icon name="kv-lock" part="icon-svg"></kv-svg-icon>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</kv-switch-button>
`;

exports[`Switch Button (unit tests) when uses default props should match the snapshot 1`] = `
<kv-switch-button state="off">
  <mock:shadow-root>
    <div class="switch-button-container">
      <div class="switch-button-content">
        <div class="switch-button switch-button--lg" part="button">
          <div class="icon-square" part="icon-square">
            <kv-svg-icon name="kv-done-all" part="icon-svg"></kv-svg-icon>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</kv-switch-button>
`;
